--- a/pi.yml
+++ b/pi.yml
@@ -1,17 +1,16 @@
 ---
-# This Playbook would deploy the whole mongodb cluster with replication and sharding.
-
 - hosts: all
   vars:
     rvm1_rubies:
             - 'ruby-2.2.3'
     rvm1_rvm_check_for_updates: False
-    transmission_initial_port: '16384'
-    whitelisted_last_port: '16383'
+    transmission_peer_port: '51413'
+    transmission_initial_port: '49152'
+    transmission_final_port: '65535'
   remote_user: pi
   roles:
     - common
     - nginx
     - { role: rvm_io.rvm1-ruby, sudo: True }
     - pia
-    - ferm
+    - transmission
