Add update resolvconf on vpn up/down

--- a/roles/pia/templates/pia.conf
+++ b/roles/pia/templates/pia.conf
@@ -25,3 +25,5 @@ status-version 3
 status status
 remote nl.privateinternetaccess.com 1194
 daemon
+up {{ openvpn_etc_folder }}/update-resolv-conf
+down {{ openvpn_etc_folder }}/update-resolv-conf
