--- a/roles/transmission/tasks/main.yml
+++ b/roles/transmission/tasks/main.yml
@@ -18,7 +18,11 @@
   file: path={{ item }} owner=debian-transmission group=debian-transmission state=directory mode='u=rwx,g=rwx'
   with_items:
     - "{{ incomplete_folder }}"
-    - "{{ complete_folder }}"
+    - "{{ transmission_complete_folder }}"
+  sudo: True
+
+- name: Create series folders
+  file: path={{ transmission_complete_folder }}/{{ series_folder }} owner=debian-transmission group=debian-transmission state=directory mode='u=rwx,g=rwx'
   sudo: True
 
 - name: Copy transmission configuration file
