--- a/roles/flexget/tasks/main.yml
+++ b/roles/flexget/tasks/main.yml
@@ -7,7 +7,10 @@
   sudo: True
 
 - name: Install flexget pip dependencies
-  pip: name=six version=1.9.0
+  pip: name={{ item.name }} version={{ item.version }}
+  with_items:
+    - { name: 'six', version: '1.9.0' }
+    - { name: 'subliminal', version: '1.0.1' }
   sudo: True
 
 - name: Install flexget
