--- a/roles/pia/tasks/main.yml
+++ b/roles/pia/tasks/main.yml
@@ -26,4 +26,4 @@
   sudo: True
 
 - name: Copy pia open port script
-  template: src=check_pia_open_port.sh.j2 dest=/home/pi/bin/check_pia_open_port.sh mode='u+rwx'
+  template: src=check_pia_open_port.sh.j2 dest={{ user_home }}/bin/check_pia_open_port.sh mode='u+rwx'
