Changed firewall policy

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -21,3 +21,7 @@
 - name: Enable cron
   service: name=cron enabled=true
   sudo: True
+
+- name: Start cron
+  service: name=cron state=started
+  sudo: True
