--- a/roles/pia/templates/pia.conf
+++ b/roles/pia/templates/pia.conf
@@ -23,7 +23,7 @@ tls-client
 remote-cert-tls server
 status-version 3
 status status
-remote nl.privateinternetaccess.com 1194
+remote nl.privateinternetaccess.com {{ vpn_port }}
 daemon
 up {{ openvpn_etc_folder }}/update-resolv-conf
 down {{ openvpn_etc_folder }}/update-resolv-conf
