--- a/vars/common.yml
+++ b/vars/common.yml
@@ -9,3 +9,5 @@ transmission_initial_port: '49152'
 transmission_final_port: '65535'
 transmission_complete_folder: '/var/lib/transmission-daemon/complete'
 series_folder: 'Series'
+vpn_port: '1194'
+transmission_rpc_port: '9091'
