--- a/test.yml
+++ b/test.yml
@@ -3,10 +3,11 @@
   vars_files:
     - vars/common.yml
     - vars/credentials.yml
-  remote_user: pi
+  remote_user: osmc
   roles:
-    - common
-    - nginx
-    - pia
-    - transmission
+          #- common
+      #- nginx
+      #- pia
+      #- ufw
+      #- transmission
     - flexget
