--- a/vars/common.yml
+++ b/vars/common.yml
@@ -8,6 +8,8 @@ transmission_peer_port: '51413'
 transmission_initial_port: '49152'
 transmission_final_port: '65535'
 transmission_complete_folder: '/media/SAMSUNG/Media/Videos'
+transmission_download_folder: '/media/SAMSUNG/Media/Complete'
+transmission_incomplete_folder: '/media/SAMSUNG/Media/Incomplete'
 series_folder: 'Series'
 anime_folder: 'Anime'
 vpn_port: '1194'
